Updates > w_sheet_hortabuo to activate refresh list, Propack retention

--- a/MgaHulagway/MarcosPower.ini
+++ b/MgaHulagway/MarcosPower.ini
@@ -12,3 +12,6 @@ JODIE=Marcos Power
 PATRICK=Marcos Power
 ASHAKA=Marcos Power
 SUSAN=Marcos Power
+TEST=Marcos Power
+TEST2=Marcos Power
+TEST3=Marcos Power
