--- a/dwini.ini
+++ b/dwini.ini
@@ -1468,3 +1468,17 @@ dw_listSourceOrder = NotDefined
 dw_listSortColumn = NotDefined
 
 
+[101311-dw_list]
+dw_listSource = NotDefined
+dw_listSourceColumn = NotDefined
+dw_listSourceOrder = NotDefined
+dw_listSortColumn = NotDefined
+
+
+[101313-dw_list]
+dw_listSource = NotDefined
+dw_listSourceColumn = NotDefined
+dw_listSourceOrder = NotDefined
+dw_listSortColumn = NotDefined
+
+
