--- a/appsystem.ini
+++ b/appsystem.ini
@@ -2,8 +2,7 @@
 DBMS=MSS
 LogPassword=
 Database=MAINAPP
-ServerName=192.168.1.12
-//ServerName=IAF-DOMINIC
+ServerName=User
 LogPass=
 Lock=
 DBParm = "Release='10.X'"
