--- a/dwini.ini
+++ b/dwini.ini
@@ -1482,3 +1482,10 @@ dw_listSourceOrder = NotDefined
 dw_listSortColumn = NotDefined
 
 
+[101317-dw_list]
+dw_listSource = NotDefined
+dw_listSourceColumn = NotDefined
+dw_listSourceOrder = NotDefined
+dw_listSortColumn = NotDefined
+
+
