updates to add dynamic feature for adding Honey component

--- a/dwini.ini
+++ b/dwini.ini
@@ -1489,3 +1489,10 @@ dw_listSourceOrder = NotDefined
 dw_listSortColumn = NotDefined
 
 
+[101234-dw_totalhours]
+dw_totalhoursSource = NotDefined
+dw_totalhoursSourceColumn = NotDefined
+dw_totalhoursSourceOrder = NotDefined
+dw_totalhoursSortColumn = NotDefined
+
+
